--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="logo" href="index.html"><img src="img/logo.svg" alt="Logo"></a>
+          <a class="logo" href="index.html"><img src="img/logo.png" alt="Logo"></a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -52,7 +52,7 @@
       <div class="container">
         <div class="row">
           <div class="col-xs-6">
-            <a href="index.html"><img src="img/logo.svg" alt="Logo"></a>
+            <a class="logo" href="index.html"><img src="img/logo.png" alt="Logo"></a>
           </div>
           <div class="col-xs-6 signin text-right navbar-nav">
             <a href="#pricing" class="scroll">SA</a>&nbsp; &nbsp;<a href="#">Sign in</a>
@@ -272,9 +272,9 @@
         <div class="row">
           <div class="col-sm-8 col-sm-offset-2 text-center">
             <i class="fa fa-envelope-o margin-40"></i>
-            <h2 class="black">Get the invite</h2>
+            <h2 class="black">Be the first</h2>
             <br />
-            <p class="black">Be the first to try our application. Currently we are developing the application. Do you want to tell us something or be aware? Send us an email and we'll know.</p>
+            <p class="black">Currently we are developing the application. Do you want to tell us something or be aware? Send us an email and we'll know.</p>
             <br />
             
             <div class="row">
