Change in abouts section

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <a href="#be-the-first" class="btn btn-secondary btn-lg scroll">Learn More</a>
                   </div>
                   <div class="col-xs-6 text-left wow fadeInUp" data-wow-delay="1.4s">
-                    <a href="#invite" class="btn btn-primary btn-lg scroll">Contact with us!</a>
+                    <a href="#invite" class="btn btn-primary btn-lg scroll">Contact</a>
                   </div>
                 </div><!--End Button Row-->  
               </div>
@@ -203,44 +203,57 @@
                       <div class="col-sm-4 wow fadeIn" data-wow-delay="0.4s">
                           <img class="avatar" src="img/erchino.jpeg" alt="Pedro Bernáldez Torres"/>
                           <h3>Pedro Bernáldez Torres</h3>
+                          <p>Back-end developer & Scrum Master</p>
                       </div>
                       <div class="col-sm-4 wow fadeIn" data-wow-delay="1.2s">
                           <img class="avatar" src="img/santi.jpeg" alt="Santiago Carmona Castillo"/>
                           <h3>Santiago Carmona Castillo</h3>
+                          <p>Quality Manager & Front-end developer</p>
                       </div>
                       <div class="col-sm-4 wow fadeIn" data-wow-delay="0.8s">
                           <img class="avatar" src="img/sergio.jpg" alt="Sergio Clemente Baltasar"/>
                           <h3>Sergio Clemente Baltasar</h3>
+                          <p>Front-end team leader</p>
                       </div>
                   </div>
+
+                  <br /> <br />
 
                   <div class="row">
                       <div class="col-sm-4 wow fadeIn" data-wow-delay="0.8s">
                           <img class="avatar" src="img/alba.jpeg" alt="Alba Olmo Trinidad"/>
                           <h3>Alba Olmo Trinidad</h3>
+                          <p>Back-end developer</p>
                       </div>
                       <div class="col-sm-4 wow fadeIn" data-wow-delay="1.2s">
                           <img class="avatar" src="img/carlos.jpeg" alt="Carlos Ortiz Prieto"/>
                           <h3>Carlos Ortiz Prieto</h3>
+                          <p>Project Manager & Back-end developer</p>
                       </div>
                       <div class="col-sm-4 wow fadeIn" data-wow-delay="0.4s">
                           <img class="avatar" src="img/javi.jpeg" alt="Javier Sánchez Beltrán"/>
                           <h3>Javier Sánchez Beltrán</h3>
+                          <p>Back-end team leader</p>
                       </div>
                   </div>
+
+                  <br /> <br />
 
                   <div class="row">
                       <div class="col-sm-4 wow fadeIn" data-wow-delay="0.4s">
                           <img class="avatar" src="img/toro.jpeg" alt="Javier Toro"/>
                           <h3>Javier Toro</h3>
+                          <p>Front-end developer</p>
                       </div>
                       <div class="col-sm-4 wow fadeIn" data-wow-delay="0.8s">
                           <img class="avatar" src="img/villarin.jpeg" alt="Alejandro Sánchez Villarín"/>
                           <h3>Alejandro Sánchez Villarín</h3>
+                          <p>Back-end developer</p>
                       </div>
                       <div class="col-sm-4 wow fadeIn" data-wow-delay="1.2s">
                           <img class="avatar" src="img/santos.jpeg" alt="Alejandro Santos Montaño"/>
                           <h3>Alejandro Santos Montaño</h3>
+                          <p>Back-end developer</p>
                       </div>
                   </div>
 
