Fix minor updates

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
           <div class="row margin-40 title">
               <div class="col-sm-8 col-sm-offset-2 text-center">
                   <h2 class="white">FAQs</h2>
-                  <p class="white">Do you have a question? 'Cause we got an answer</p>
+                  <p class="white">Do you have a question? Cause we got an answer.</p>
               </div>
           </div>
 
