Fix mobile adjust v2

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                       <div class="col-sm-4 wow fadeIn" data-wow-delay="1s">
                           <img class="avatar" src="img/javi.jpeg" alt="Javier Sánchez Beltrán"/>
                           <h3>Javier Sánchez Beltrán</h3>
-                          <p>Front-end team leader</p>
+                          <p>Front-end developer</p>
                       </div>
                   </div>
 
