--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
+          <a class="logo" href="index.html"><img src="img/logo.png" alt="Logo"></a>
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="logo" href="index.html"><img src="img/logo.png" alt="Logo"></a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -56,7 +56,7 @@
     <header>
       <div class="container">
         <div class="row">
-          <div class="col-xs-6">
+          <div class="col-xs-12">
             <a class="logo" href="index.html"><img src="img/logo.png" alt="Logo"></a>
           </div>
           <div class="col-xs-6 signin text-right navbar-nav">
@@ -150,11 +150,11 @@
             </div>
 
             <div id="icons" class="row margin-50">
-                <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
+                <div class="col-sm-6 col-xs-6 wow fadeIn" data-wow-delay="0.4s">
                     <img src="https://image.flaticon.com/icons/svg/1051/1051126.svg" alt="" />
                     <h3 class="white">Radius of appearance</h3>
                 </div>
-                <div class="col-sm-4 wow fadeIn" data-wow-delay="0.8s">
+                <div class="col-sm-4 col-xs-6 wow fadeIn" data-wow-delay="0.8s">
                     <img src="https://image.flaticon.com/icons/svg/1244/1244252.svg" alt="" />
                     <h3 class="white">Duration</h3>
                 </div>
