--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- Styles -->
   <link rel="stylesheet" href="css/font-awesome.min.css">
   <link rel="stylesheet" href="css/animate.css">
-  <link href='http://fonts.googleapis.com/css?family=Raleway:400,100,200,300,500,600,700,800,900|Montserrat:400,700' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Raleway:400,100,200,300,500,600,700,800,900|Montserrat:400,700' rel='stylesheet' type='text/css'>
   
 
   <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -55,8 +55,8 @@
         
     <header>
       <div class="container">
-        <div class="row">
-          <div class="col-xs-12">
+        <div class="row nav">
+          <div class="col-md-4 col-sm-8 col-xs-12">
             <a class="logo" href="index.html"><img src="img/logo.png" alt="Logo"></a>
           </div>
           <div class="col-xs-6 signin text-right navbar-nav">
