--- a/index.html
+++ b/index.html
@@ -320,9 +320,17 @@
       <div class="container">
 
           <div class="col-sm-4 text-right">
-            <p><small>Copyright &copy; 2019. All rights reserved.
-          </div>
+            <p><small>Copyright &copy; 2019. All rights reserved.</small>
+          
 
+          <p><small>Header photo by <a href="https://www.pexels.com/photo/man-holding-black-smartphone-1437554/">bruce mars from Pexels</a></small></p>
+
+          <p><small>Icons made by <a href="https://www.freepik.com/" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/"    title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/"    title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></small></p>
+
+          <p><small>Icons made by <a href="https://www.flaticon.com/authors/srip" title="srip">srip</a> from <a href="https://www.flaticon.com/"    title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/"    title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></small></p>
+
+<p><small>Thanks to Rob Simonsen for the Blue song which is the main song in our spot.</small></p>
+          </div>
       </div>
     </footer>
     
