--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
               <ul>
                   <li>
                       <span>What is your goal?</span>
-                      <span>Our goal is giving you the possibility to share anything you want using just you voice.</span>
+                      <span>Our goal is giving you the possibility to share anything you want using just your voice.</span>
                   </li>
                   <li>
                       <span>Is it free-to-use?</span>
