Add terms and conditions content

--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -1,9 +1,44 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Prueba</title>
+<meta charset=utf-8 />
+<title>Terms and conditions of SoundGo</title>
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Assistant" rel="stylesheet">
+  <style>
+    body {
+	  font-family: 'assistant';
+	}
+
+	.container {
+	  margin-left: 10%;
+	  width: 80%;
+	}
+	</style>
 </head>
 <body>
-<p>this is a prueba manigga</p>
+  <div class="container">
+  
+  
+  <h1>Terms and conditions of SoundGo</h1>
+  
+  <p>It is a necessary requirement for the use of this web, that you read and accept the following Terms and Conditions that are written below. The use of our services will mean that you have read and accepted the Terms and Conditions of Use in this document.</p>
+
+  <h3>PERSONAL INFORMATION</h3>
+  
+  <p>An administrator can access to the information of the users, their records and their advertisements, being able to see the information of the users except the credit card. An administrator is able to delete the records and the advertisements.</p>
+<p>All the information requested is necessary for the correct use of the application. It is necessary to allow the use of the microphone and the location.</p>
+<p>If an user or advertiser wants to delete some content and the application does not allow it, they can contact soundgoapp2@gmail.com and we will erase the content. If any user or advertiser wants to export their data, they can contact them from the same email.</p>
+<p>If an advertiser wants to delete his/her account and he/she has pending payments, the advertiser won't be able to delete his account until the end of the month when the payment has been made. The same process occur if the user want to delete his credit card or one of his advertisement, these won't be completely deleted until the payment is made. </p>
+<p>If you have any problems with this, you can contact the mail soundgoapp2@gmail.com.</p>
+    <p>This system uses the services of <a href="https://cloudinary.com/about">Cloudinary</a> to store the records and images, the services of <a href="https://www.mapbox.com/">Mapbox</a> to show the information in the map and the services of <a href="https://firebase.google.com/">Firebase</a> to update the map in real time. In addition, it has a data base where all the information is stored.</p>
+<p>This website uses a cookie to store user data.</p>
+
+  <h3>PRIVACY</h3> 
+
+    <p>This site <a href="https://soundgo-v2.herokuapp.com">web</a> guarantees that the personal information you send has the necessary security. The data entered by user will not be delivered to third parties, unless it must be disclosed in compliance with an order Soundgo reserves the rights to change or modify these terms without prior notice.</p>
+  <p>We will notify you if your data is ever in danger.</p>
+</div>
+  <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
