--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -9,10 +9,14 @@
     body {
 	  font-family: 'assistant';
 	}
-
+	h1 {
+		margin-bottom: 20px;
+	}
 	.container {
-	  margin-left: 10%;
-	  width: 80%;
+	    margin-top: 50px;
+	    margin-left: 20%;
+	    width: 60%;
+	    font-size: 16px;
 	}
 	</style>
 </head>
