Add target blank to hrefs

--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -35,12 +35,12 @@
 <p>If an user or advertiser wants to delete some content and the application does not allow it, they can contact soundgoapp2@gmail.com and we will erase the content. If any user or advertiser wants to export their data, they can contact them from the same email.</p>
 <p>If an advertiser wants to delete his/her account and he/she has pending payments, the advertiser won't be able to delete his account until the end of the month when the payment has been made. The same process occur if the user want to delete his credit card or one of his advertisement, these won't be completely deleted until the payment is made. </p>
 <p>If you have any problems with this, you can contact the mail soundgoapp2@gmail.com.</p>
-    <p>This system uses the services of <a href="https://cloudinary.com/about">Cloudinary</a> to store the records and images, the services of <a href="https://www.mapbox.com/">Mapbox</a> to show the information in the map and the services of <a href="https://firebase.google.com/">Firebase</a> to update the map in real time. In addition, it has a data base where all the information is stored.</p>
+    <p>This system uses the services of <a href="https://cloudinary.com/about" target="_blank">Cloudinary</a> to store the records and images, the services of <a href="https://www.mapbox.com/">Mapbox</a> to show the information in the map and the services of <a href="https://firebase.google.com/" target="_blank">Firebase</a> to update the map in real time. In addition, it has a data base where all the information is stored.</p>
 <p>This website uses a cookie to store user data.</p>
 
   <h3>PRIVACY</h3> 
 
-    <p>This site <a href="https://soundgo-v2.herokuapp.com">web</a> guarantees that the personal information you send has the necessary security. The data entered by user will not be delivered to third parties, unless it must be disclosed in compliance with an order Soundgo reserves the rights to change or modify these terms without prior notice.</p>
+    <p>This site <a href="https://soundgo-v2.herokuapp.com" target="_blank">web</a> guarantees that the personal information you send has the necessary security. The data entered by user will not be delivered to third parties, unless it must be disclosed in compliance with an order Soundgo reserves the rights to change or modify these terms without prior notice.</p>
   <p>We will notify you if your data is ever in danger.</p>
 </div>
   <script src="js/bootstrap.min.js"></script>
