Add more style to links section

--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
       <div class="container">
           <div class="row margin-40 title">
               <div class="col-sm-8 col-sm-offset-2 text-center">
-                  <h2 class="white">Our links</h2>
+                  <h2 class="white">Links</h2>
                   
               </div>
           </div>
