Add description to link section

--- a/index.html
+++ b/index.html
@@ -320,11 +320,11 @@
           <div class="row margin-40 title">
               <div class="col-sm-8 col-sm-offset-2 text-center">
                   <h2 class="white">Links</h2>
-                  
+                  <p class="white">We are going to put here all the relevant links about SoundGo.</p>
               </div>
           </div>
 
-          <div class="row margin-50 center white">
+          <div  center white">
               <ul>
                   <li>
                       <span>GitHub Code</span>
