--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
               </div>
           </div>
 
-          <div  center white">
+          <div class="row center white">
               <ul>
                   <li>
                       <span>GitHub Code</span>
