Added third version of soundgo

--- a/index.html
+++ b/index.html
@@ -339,6 +339,10 @@
                       <span>SoundGo v2</span>
                       <span><a href="https://soundgo-v2.herokuapp.com/">Click here to see our second version</a></span>
                   </li>
+                  <li>
+                    <span>SoundGo v3</span>
+                    <span><a href="https://soundgo-v3.herokuapp.com/">Click here to see our third version</a></span>
+                  </li>
               </ul>
           </div>
 
