Add one video iframe to main-info section

--- a/index.html
+++ b/index.html
@@ -133,6 +133,12 @@
           </div>
         </div>
       </div>
+      <div class ="container">
+        <div class="row">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/TjKRkeSOmS8" frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+      </div>
     </section>
         
     <!--Pricing-->
@@ -332,16 +338,13 @@
                       <span><a href="https://github.com/soundgo/backend">Backend repository</a></span>
                   </li>
                   <li>
-                      <span>SoundGo v1</span>
-                      <span><a href="https://soundgo-v1.herokuapp.com/">Click here to see our first version</a></span>
+                    <span>SoundGo official version</span>
+                    <span><a href="https://soundgo.herokuapp.com/">Click here to see our official version</a></span>
                   </li>
                   <li>
-                      <span>SoundGo v2</span>
-                      <span><a href="https://soundgo-v2.herokuapp.com/">Click here to see our second version</a></span>
-                  </li>
-                  <li>
-                    <span>SoundGo v3</span>
-                    <span><a href="https://soundgo-v3.herokuapp.com/">Click here to see our third version</a></span>
+                      <span><a href="https://soundgo-v1.herokuapp.com/">SoundGo v1</a></span>
+                      <span><a href="https://soundgo-v2.herokuapp.com/">SoundGo v2</a></span>
+                      <span><a href="https://soundgo-v3.herokuapp.com/">SoundGo v3</a></span>
                   </li>
               </ul>
           </div>
