--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             <p>We limit the duration of the messages and the time you have to record. In this way we try to concentrate the best of you.</p>
           </div>
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-4 center">
           <h3>Official video</h3>
           <iframe width="560" height="315" src="https://www.youtube.com/embed/ggjNaqspEqk" frameborder="0"
             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -175,7 +175,7 @@
             </div>
 
             <div class="row margin-50 center white">
-              <h3 class="center white">We recommend you to see this video</h3>
+              <h3 class="center white">We recommend you to see this video</h3><br>
               <iframe width="560" height="315" src="https://www.youtube.com/embed/TjKRkeSOmS8" frameborder="0"
                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
