--- a/index.html
+++ b/index.html
@@ -194,12 +194,12 @@
 
                   <div class="row">
                       <div class="col-sm-4 wow fadeIn" data-wow-delay="0.4s">
-                          <img class="avatar" src="img/erchino.jpeg" alt="Pedro Bernáldez Torres"/>
+                          <img class="avatar" src="img/pedro.jpg" alt="Pedro Bernáldez Torres"/>
                           <h3>Pedro Bernáldez Torres</h3>
                           <p>Back-end developer & Scrum Master</p>
                       </div>
                       <div class="col-sm-4 wow fadeIn" data-wow-delay="0.6s">
-                          <img class="avatar" src="img/santi.jpeg" alt="Santiago Carmona Castillo"/>
+                          <img class="avatar" src="img/santiago.jpg" alt="Santiago Carmona Castillo"/>
                           <h3>Santiago Carmona Castillo</h3>
                           <p>Quality Manager & Front-end developer</p>
                       </div>
@@ -214,17 +214,17 @@
 
                   <div class="row">
                       <div class="col-sm-4 wow fadeIn" data-wow-delay="0.6s">
-                          <img class="avatar" src="img/alba.jpeg" alt="Alba Olmo Trinidad"/>
+                          <img class="avatar" src="img/alba.jpg" alt="Alba Olmo Trinidad"/>
                           <h3>Alba Olmo Trinidad</h3>
                           <p>Back-end developer</p>
                       </div>
                       <div class="col-sm-4 wow fadeIn" data-wow-delay="0.8s">
-                          <img class="avatar" src="img/carlos.jpeg" alt="Carlos Ortiz Prieto"/>
+                          <img class="avatar" src="img/carlos.jpg" alt="Carlos Ortiz Prieto"/>
                           <h3>Carlos Ortiz Prieto</h3>
                           <p>Project Manager & Back-end developer</p>
                       </div>
                       <div class="col-sm-4 wow fadeIn" data-wow-delay="1s">
-                          <img class="avatar" src="img/javi.jpeg" alt="Javier Sánchez Beltrán"/>
+                          <img class="avatar" src="img/sanchez.jpg" alt="Javier Sánchez Beltrán"/>
                           <h3>Javier Sánchez Beltrán</h3>
                           <p>Front-end developer</p>
                       </div>
@@ -234,17 +234,17 @@
 
                   <div class="row">
                       <div class="col-sm-4 wow fadeIn" data-wow-delay="0.8s">
-                          <img class="avatar" src="img/toro.jpeg" alt="Javier Toro"/>
+                          <img class="avatar" src="img/toro.jpg" alt="Javier Toro"/>
                           <h3>Javier Toro</h3>
                           <p>Front-end developer</p>
                       </div>
                       <div class="col-sm-4 wow fadeIn" data-wow-delay="1s">
-                          <img class="avatar" src="img/villarin.jpeg" alt="Alejandro Sánchez Villarín"/>
+                          <img class="avatar" src="img/villarin.jpg" alt="Alejandro Sánchez Villarín"/>
                           <h3>Alejandro Sánchez Villarín</h3>
                           <p>Back-end team leader</p>
                       </div>
                       <div class="col-sm-4 wow fadeIn" data-wow-delay="1.2s">
-                          <img class="avatar" src="img/santos.jpeg" alt="Alejandro Santos Montaño"/>
+                          <img class="avatar" src="img/santos.jpg" alt="Alejandro Santos Montaño"/>
                           <h3>Alejandro Santos Montaño</h3>
                           <p>Back-end developer</p>
                       </div>
