--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             <p>We limit the duration of the messages and the time you have to record. In this way we try to concentrate the best of you.</p>
           </div>
         </div>
-        <div class="col-sm-4 center">
+        <div class="video-info center">
           <h3>Official video</h3>
           <iframe width="560" height="315" src="https://www.youtube.com/embed/ggjNaqspEqk" frameborder="0"
             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
