Fix code versions

--- a/index.html
+++ b/index.html
@@ -347,9 +347,9 @@
                     <span><a href="https://soundgo.herokuapp.com/">Click here to see our official version</a></span>
                   </li>
                   <li>
-                      <span><a href="https://soundgo-v1.herokuapp.com/">SoundGo v1</a></span>
-                      <span><a href="https://soundgo-v2.herokuapp.com/">SoundGo v2</a></span>
-                      <span><a href="https://soundgo-v3.herokuapp.com/">SoundGo v3</a></span>
+                      <a href="https://soundgo-v1.herokuapp.com/">SoundGo v1</a>
+                      <a href="https://soundgo-v2.herokuapp.com/">SoundGo v2</a>
+                      <a href="https://soundgo-v3.herokuapp.com/">SoundGo v3</a>
                   </li>
               </ul>
           </div>
