--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
             <span><a href="https://soundgo.herokuapp.com/">Click here to see our official version</a></span>
           </li>
           <li>
-            <span>Previous versioins</span>
+            <span>Previous versions</span>
             <a href="https://soundgo-v1.herokuapp.com/">SoundGo v1  |</a>
             <a href="https://soundgo-v2.herokuapp.com/">SoundGo v2  |</a>
             <a href="https://soundgo-v3.herokuapp.com/">SoundGo v3</a>
