--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
               <li>
                 <div class="video">
                   <iframe
-                    src="https://www.youtube.com/embed/rmKBSUufCSY?enablejsapi=1&rel=0&showinfo=0&iv_load_policy=3&modestbranding=1"
+                    src="https://www.youtube.com/watch?v=oPVcEIHlsFA?enablejsapi=1&rel=0&showinfo=0&iv_load_policy=3&modestbranding=1"
                     frameborder="0" allowfullscreen data-autoplay="false"></iframe>
                 </div>
                 <div class="caption">For investors</div>
